# pulumi-thalassa

./: .ci-mgmt.yaml  .conform.yaml  .gitignore  .golangci.yml  CHANGELOG.md  Makefile  README.md  mise.toml  package-lock.json  release-please-config.json  renovate.json
.github/workflows/: build_provider.yml  build_sdk.yml  codeql.yml  dependency_review.yml  lint.yml  prerequisites.yml  publish.yml  release.yml  resync-build.yml  scorecard.yml  verify.yml
examples/: examples_nodejs_test.go  examples_test.go  go.mod  go.sum
examples/basic-py/: __main__.py
examples/basic-ts/: index.ts  package-lock.json
provider/: go.mod  go.sum  resources.go
sdk/: go.mod  go.sum
sdk/dotnet/: BlockVolume.cs  BlockVolumeAttachment.cs  CloudInitTemplate.cs  DbaasDbBackupschedule.cs  DbaasDbCluster.cs  DbaasPgDatabase.cs  DbaasPgGrant.cs  DbaasPgRoles.cs  DnsRecord.cs  DnsZone.cs  GetIamRole.cs  (+75 more)
sdk/python/: Pulumi.yaml  pyproject.toml
sdk/python/pulumi_thalassa/: README.md  __init__.py  _inputs.py  _utilities.py  block_volume.py  block_volume_attachment.py  cloud_init_template.py  dbaas_db_backupschedule.py  dbaas_db_cluster.py  dbaas_pg_database.py  dbaas_pg_grant.py  dbaas_pg_roles.py  dns_record.py  dns_zone.py  dns_zone_dnssec.py  get_dbaas_db_backup.py  get_dbaas_db_backupschedule.py  get_dbaas_db_cluster.py  get_dbaas_pg_database.py  get_dbaas_pg_roles.py  get_iam_organisation_members.py  get_iam_role.py  get_iam_service_account.py  get_iam_team.py  get_kms_key.py  get_kubernetes_cluster.py  get_kubernetes_cluster_role.py  get_kubernetes_cluster_session_token.py  get_kubernetes_version.py  get_loadbalancer.py  get_machine_image.py  get_machine_type.py  get_natgateway.py  get_objectstorage_bucket.py  get_organisation.py  get_region.py  get_regions.py  get_route_table.py  get_security_group.py  get_snapshot.py  (+48 more)
sdk/python/pulumi_thalassa/config/: __init__.pyi  vars.py
(+321 files in other folders)
