[project]
  name = "pulumi_thalassa"
  dynamic = ["version"]
  description = "A Pulumi package for creating and managing Thalassa Cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["thalassa", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.9"
  [project.license]
    license = "Apache-2.0"
  [project.urls]
    Homepage = "https://github.com/sandervb2/pulumi-thalassa"
    Repository = "https://github.com/sandervb2/pulumi-thalassa"

[build-system]
  requires = ["setuptools>=70", "setuptools-scm>=8", "wheel"]
  build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
pulumi_thalassa = ["py.typed", "pulumi-plugin.json"]

[tool.setuptools_scm]
# read tags like v1.2.3 -> 1.2.3
tag_regex = '^v(?P<version>\d+\.\d+\.\d+)$'
version_scheme = "release-branch-semver"

